Jasmine Unit tests working on Leaflet functionality

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
   <script type="text/javascript" src="jasmine/lib/jasmine-2.0.0/jasmine-html.js"></script>
   <script type="text/javascript" src="jasmine/lib/jasmine-2.0.0/boot.js"></script>
 
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+
   <!-- include source files here... -->
-  <script type="text/javascript" src="jasmine/src/Player.js"></script>
-  <script type="text/javascript" src="jasmine/src/Song.js"></script>
+  <script type="text/javascript" src="jasmine/src/Animal.js"></script>
+  <script type="text/javascript" src="jasmine/src/Map.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="jasmine/spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="jasmine/spec/PlayerSpec.js"></script>
+
+  <script type="text/javascript" src="jasmine/spec/animalSpec.js"></script>
+  <script type="text/javascript" src="jasmine/spec/mapSpec.js"></script>
 
 </head>
 
 <body>
+<div id="map"></div>
 </body>
 </html>
