--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -11,6 +11,9 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+
   <!-- include source files here... -->
   
   <script type="text/javascript" src="src/Animal.js"></script>
@@ -22,5 +25,6 @@
 </head>
 
 <body>
+<div id="map"></div>
 </body>
 </html>
