More specs for investment app

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="jasmine/src/Animal.js"></script>
-  <script type="text/javascript" src="jasmine/src/Map.js"></script>
+  <script type="text/javascript" src="jasmine/src/Stock.js"></script>
+  <script type="text/javascript" src="jasmine/src/Investment.js"></script>
+  <!--<script type="text/javascript" src="jasmine/src/Animal.js"></script>
+  <script type="text/javascript" src="jasmine/src/Map.js"></script>-->
 
   <!-- include spec files here... -->
-
-  <script type="text/javascript" src="jasmine/spec/animalSpec.js"></script>
-  <script type="text/javascript" src="jasmine/spec/mapSpec.js"></script>
+  <script type="text/javascript" src="jasmine/spec/InvestmentSpec.js"></script>
+  <!--<script type="text/javascript" src="jasmine/spec/animalSpec.js"></script>
+  <script type="text/javascript" src="jasmine/spec/mapSpec.js"></script>-->
 
 </head>
 
