JsHinting, added nested describes, but no matchers as there is a problem with them in my Jasmine version

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="jasmine/spec/InvestmentSpec.js"></script>
+  <!--<script type="text/javascript" src="jasmine/spec/SpecHelper.js"></script>-->
   <!--<script type="text/javascript" src="jasmine/spec/animalSpec.js"></script>
   <script type="text/javascript" src="jasmine/spec/mapSpec.js"></script>-->
 
